// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuditStoreQARatingForm/> is rendered correctly when AuditStore is already rated 1`] = `
<div
  className="modal"
  style={
    Object {
      "display": "block",
      "overflow": "scroll",
    }
  }
  tabIndex="-1"
>
  <div
    className="modal-backdrop fade in"
    onClick={[Function]}
    style={
      Object {
        "height": "100%",
        "zIndex": "1060",
      }
    }
  />
  <div
    className="modal-dialog "
    style={
      Object {
        "zIndex": "1070",
      }
    }
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          className="close"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
        <h4
          className="modal-title"
        >
          Rate Report
        </h4>
      </div>
      <div
        className="modal-body"
        style={
          Object {
            "maxHeight": "85vh",
            "overflowY": "scroll",
          }
        }
      >
        <form
          onSubmit={[Function]}
        >
          <ul />
          <div
            className="form-group"
          >
            <label
              className="control-label"
            >
              Auditor Rating:
            </label>
            <div
              className="star-rating star-rating-lg"
            >
              <input
                checked={false}
                id="5-stars"
                name="rating"
                onChange={[Function]}
                type="radio"
              />
              <label
                className="star"
                htmlFor="5-stars"
              >
                ★
              </label>
              <input
                checked={false}
                id="4-stars"
                name="rating"
                onChange={[Function]}
                type="radio"
              />
              <label
                className="star"
                htmlFor="4-stars"
              >
                ★
              </label>
              <input
                checked={true}
                id="3-stars"
                name="rating"
                onChange={[Function]}
                type="radio"
              />
              <label
                className="star"
                htmlFor="3-stars"
              >
                ★
              </label>
              <input
                checked={false}
                id="2-stars"
                name="rating"
                onChange={[Function]}
                type="radio"
              />
              <label
                className="star"
                htmlFor="2-stars"
              >
                ★
              </label>
              <input
                checked={false}
                id="1-star"
                name="rating"
                onChange={[Function]}
                type="radio"
              />
              <label
                className="star"
                htmlFor="1-star"
              >
                ★
              </label>
            </div>
          </div>
          <button
            className="btn btn-lg btn-primary"
          >
            Save Rating
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AuditStoreQARatingForm/> is rendered correctly when AuditStore is not auditor rated 1`] = `
<div
  className="modal"
  style={
    Object {
      "display": "block",
      "overflow": "scroll",
    }
  }
  tabIndex="-1"
>
  <div
    className="modal-backdrop fade in"
    onClick={[Function]}
    style={
      Object {
        "height": "100%",
        "zIndex": "1060",
      }
    }
  />
  <div
    className="modal-dialog "
    style={
      Object {
        "zIndex": "1070",
      }
    }
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          className="close"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
        <h4
          className="modal-title"
        >
          Rate Report
        </h4>
      </div>
      <div
        className="modal-body"
        style={
          Object {
            "maxHeight": "85vh",
            "overflowY": "scroll",
          }
        }
      >
        <form
          onSubmit={[Function]}
        >
          <ul />
          <div
            className="form-group"
          >
            <label
              className="control-label"
            >
              Auditor Rating:
            </label>
            <div
              className="star-rating star-rating-lg"
            >
              <input
                checked={false}
                id="5-stars"
                name="rating"
                onChange={[Function]}
                type="radio"
              />
              <label
                className="star"
                htmlFor="5-stars"
              >
                ★
              </label>
              <input
                checked={false}
                id="4-stars"
                name="rating"
                onChange={[Function]}
                type="radio"
              />
              <label
                className="star"
                htmlFor="4-stars"
              >
                ★
              </label>
              <input
                checked={false}
                id="3-stars"
                name="rating"
                onChange={[Function]}
                type="radio"
              />
              <label
                className="star"
                htmlFor="3-stars"
              >
                ★
              </label>
              <input
                checked={false}
                id="2-stars"
                name="rating"
                onChange={[Function]}
                type="radio"
              />
              <label
                className="star"
                htmlFor="2-stars"
              >
                ★
              </label>
              <input
                checked={false}
                id="1-star"
                name="rating"
                onChange={[Function]}
                type="radio"
              />
              <label
                className="star"
                htmlFor="1-star"
              >
                ★
              </label>
            </div>
          </div>
          <button
            className="btn btn-lg btn-primary"
          >
            Save Rating
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AuditStoreQARatingForm/> is rendered correctly when the AuditStore is loading 1`] = `
<div
  className="modal"
  style={
    Object {
      "display": "block",
      "overflow": "scroll",
    }
  }
  tabIndex="-1"
>
  <div
    className="modal-backdrop fade in"
    onClick={[Function]}
    style={
      Object {
        "height": "100%",
        "zIndex": "1060",
      }
    }
  />
  <div
    className="modal-dialog "
    style={
      Object {
        "zIndex": "1070",
      }
    }
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          className="close"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
        <h4
          className="modal-title"
        >
          Rate Report
        </h4>
      </div>
      <div
        className="modal-body"
        style={
          Object {
            "maxHeight": "85vh",
            "overflowY": "scroll",
          }
        }
      >
        <form
          onSubmit={[Function]}
        >
          <ul />
          <div
            className="form-group"
          >
            <label
              className="control-label"
            >
              Auditor Rating:
            </label>
            <div
              className="star-rating star-rating-lg"
            >
              <input
                checked={false}
                id="5-stars"
                name="rating"
                onChange={[Function]}
                type="radio"
              />
              <label
                className="star"
                htmlFor="5-stars"
              >
                ★
              </label>
              <input
                checked={false}
                id="4-stars"
                name="rating"
                onChange={[Function]}
                type="radio"
              />
              <label
                className="star"
                htmlFor="4-stars"
              >
                ★
              </label>
              <input
                checked={false}
                id="3-stars"
                name="rating"
                onChange={[Function]}
                type="radio"
              />
              <label
                className="star"
                htmlFor="3-stars"
              >
                ★
              </label>
              <input
                checked={false}
                id="2-stars"
                name="rating"
                onChange={[Function]}
                type="radio"
              />
              <label
                className="star"
                htmlFor="2-stars"
              >
                ★
              </label>
              <input
                checked={false}
                id="1-star"
                name="rating"
                onChange={[Function]}
                type="radio"
              />
              <label
                className="star"
                htmlFor="1-star"
              >
                ★
              </label>
            </div>
          </div>
          <button
            className="btn btn-lg btn-primary"
          >
            Save Rating
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;
